# gcc-alpha-b18

./: ChangeLog  Makefile  Makefile.in  config.cache  config.guess  config.status  config.sub  configure  configure.in  move-if-change  mpw-install
newlib/: ChangeLog  Makefile  Makefile.in  NEWS  README  config-ml.in  config.status  configure.in  install-sh
newlib/doc/: Makefile  Makefile.in  ansidecl.h  config.status  configure.in  doc.str  makedoc.c
newlib/host/: any
newlib/libc/: Makefile  Makefile.in  config.status  libc.texinfo  saber  sys.tex
newlib/libc/ctype/: Makefile  Makefile.in  _tolower.c  _toupper.c  config.status  ctype.tex  tolower.c  toupper.c
newlib/libc/errno/: Makefile  Makefile.in  config.status
newlib/libc/include/: _ansi.h  ctype.h  math.h  process.h  stdio.h  stdlib.h  string.h  time.h  unctrl.h
newlib/libc/locale/: Makefile  Makefile.in  config.status  locale.tex
newlib/libc/machine/: Makefile  Makefile.in  config.status
newlib/libc/misc/: Makefile  Makefile.in  config.status  dprintf.c  ffs.c  misc.tex  unctrl.c
newlib/libc/posix/: Makefile  Makefile.in  closedir.c  config.status  creat.c  execl.c  execle.c  execlp.c  execv.c  execve.c  execvp.c  isatty.c  opendir.c  popen.c  readdir.c  rewinddir.c  scandir.c  seekdir.c  telldir.c
newlib/libc/reent/: Makefile  Makefile.in  config.status  execr.c  fstatr.c  impure.c  linkr.c  lseekr.c  openr.c  readr.c  reent.c  reent.tex  sbrkr.c  signalr.c  statr.c  timer.c  writer.c
newlib/libc/signal/: Makefile  Makefile.in  config.status  raise.c  signal.c  signal.tex
newlib/libc/stdio/: Makefile  Makefile.in  config.status  fdopen.c  findfp.c  fiprintf.c  flags.c  fopen.c  freopen.c  fseek.c  ftell.c  fwalk.c  puts.c  rename.c  rewind.c  setvbuf.c  stdio.tex  tmpnam.c  vfprintf.c  vfprintf.c.orig  vfscanf.c
newlib/libc/stdlib/: Makefile  Makefile.in  abort.c  assert.c  atof.c  atoff.c  atoi.c  atol.c  bsearch.c  calloc.c  config.status  div.c  dtoa.c  efgcvt.c  environ.c  eprintf.c  exit.c  getenv.c  getopt.c  ldiv.c  malign.c  malloc.c  malloc.h  mallocr.c  mlock.c  mprec.c  mprec.h  msize.c  mstats.c  mtrim.c  rand.c  rand_r.c  realloc.c  setenv.c  stdlib.tex  strtod.c  strtol.c  strtoul.c  system.c  valloc.c
newlib/libc/string/: Makefile  Makefile.in  config.status  memchr.c  memcmp.c  memcpy.c  memset.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strerror.c  strings.tex  strlen.c  strlwr.c  strncat.c  strncmp.c  strncpy.c  strtok.c  strtok_r.c  strupr.c
newlib/libc/sys/: Makefile  Makefile.in  config.status
newlib/libc/syscalls/: Makefile  Makefile.in  config.status  sysfork.c
newlib/libc/time/: Makefile  Makefile.in  asctime.c  asctime_r.c  config.status  ctime.c  gmtime.c  gmtime_r.c  lcltime.c  lcltime_r.c  time.c  time.tex
newlib/libc/unix/: Makefile.in  getcwd.c  getlogin.c  getpass.c  getpwent.c  getut.c  sigset.c  ttyname.c
newlib/libm/: Makefile  Makefile.in  config.status  libm.texinfo
newlib/libm/math/: Makefile  Makefile.in  config.status  e_acos.c  e_acosh.c  e_asin.c  e_atanh.c  e_cosh.c  e_exp.c  e_fmod.c  e_j0.c  e_j1.c  e_jn.c  e_log.c  e_log10.c  e_pow.c  e_rem_pio2.c  e_remainder.c  e_scalb.c  e_sinh.c  ef_cosh.c  ef_exp.c  ef_hypot.c  ef_pow.c  ef_scalb.c  ef_sqrt.c  fdlibm.h  k_cos.c  k_rem_pio2.c  k_sin.c  k_standard.c  k_tan.c  math.tex  s_asinh.c  s_atan.c  s_cbrt.c  s_ceil.c  s_copysign.c  s_cos.c  s_erf.c  (+102 more)
newlib/libm/test/: Makefile.in  acos_vec.c  acosf_vec.c  acosh_vec.c  acoshf_vec.c  asin_vec.c  asinf_vec.c  asinh_vec.c  asinhf_vec.c  atan2_vec.c  atan2f_vec.c  atan_vec.c  atanf_vec.c  atanh_vec.c  atanhf_vec.c  ceil_vec.c  ceilf_vec.c  conv_vec.c  convert.c  cos_vec.c  cosf_vec.c  cosh_vec.c  coshf_vec.c  dcvt.c  dvec.c  erf_vec.c  erfc_vec.c  erfcf_vec.c  erff_vec.c  exp_vec.c  expf_vec.c  fabs_vec.c  fabsf_vec.c  floor_vec.c  floorf_vec.c  fmod_vec.c  fmodf_vec.c  gamma_vec.c  gammaf_vec.c  hypot_vec.c  (+41 more)
winsup-b19/: CYGWIN32_LICENSE  ChangeLog  ChangeLog-95  ChangeLog-96  ChangeLog-97  Makefile.in  Makefile.sav  advapi32.def  assert.cc  config.status  configure  configure.in  console.cc  cygwin.def  cygwin.din  cygwinb19.def  dcrt0.cc  delqueue.cc  delqueue.h  dirsearch.cc  dlfcn.cc  dlfcn.h  dll_init.cc  dll_init.h  environ.cc  exceptions.cc  exec.cc  fcntl.cc  fhandler.cc  fhandler.h  fork.cc  getopt.c  glob.c  glob.h  grp.cc  heap.cc  hinfo.cc  init.cc  ioctl.cc  libccrt0.cc  (+44 more)
winsup-b19/config/alpha/: getsp.S  longjmp.S  makefrag  peoffset.c  setjmp.S
winsup-b19/config/i386/: longjmp.c  makefrag  setjmp.c
winsup-b19/config/ppc/: longjmp.S  makefrag  setjmp.S
winsup-b19/doc/: calls.texinfo  copy.texinfo  faq.texinfo  history.texinfo  how.texinfo  readme.texinfo  relnotes.texinfo  what.texinfo  who.texinfo
winsup-b19/include/: a.out.h  exceptions.h  fcntl.h  features.h  getopt.h  io.h  lastlog.h  limits.h  mapi.h  memory.h  mntent.h  mywinsock.h  netdb.h  paths.h  shellapi.h  strings.h  syslog.h  termio.h  tzfile.h  utmp.h  wchar.h  winadvapi.h  windows.h  winkernel.h  winsock.h  wintypes.h
winsup-b19/include/Windows32/: Base.h  Defines.h  Defines.h.orig  Functions.h  Structures.h  Structures.h.orig
winsup-b19/include/arpa/: inet.h  telnet.h
winsup-b19/include/asm/: byteorder.h  socket.h  types.h
winsup-b19/include/cygwin32/: cygwin_dll.h  if.h  in.h  ip.h  socket.h  types.h  uio.h
winsup-b19/include/net/: if.h
winsup-b19/include/netinet/: in.h  ip.h  ip_icmp.h
winsup-b19/include/sys/: cdefs.h  cygwin.h  file.h  ioctl.h  (+14 more)
winsup-b19/mingw/: ChangeLog  Makefile  Makefile.in  config.status  configure  configure.in  crt_noglob.c  crtdll.def  crtglob.c  ctype_old.c  dirent.c  dllcrt0.c  dllmain.c  hugeval.c  init.c  main.c  mcrt0.c  moldnames.def  oldnames.c  readme.txt  string_old.c
winsup-b19/regexp/: COPYRIGHT  Makefile  Makefile.in  README  config.status  configure  configure.in  regerror.c  regexp.3  regexp.c  regexp.h  regmagic.h  regsub.c
winsup-b19/utils/: Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.in  cygwin.cc  kill.cc  mkgroup.c  mkpasswd.c  mount.cc  ps.cc  termcap  umount.cc
(+2485 files in other folders)
